force-app/main/default/objects/COVID_Doc__c/COVID_Doc__c.object-meta.xml
<CustomObject>
    <label>COVID Doc</label>
    <nameField>
        <displayFormat>CD-{0000}</displayFormat>
        <label>COVID Doc Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>COVID Docs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>