force-app/main/default/objects/COVID_Doc__c/fields/Test_Result__c.field-meta.xml
<CustomField>
    <fullName>Test_Result__c</fullName>
    <label>Test Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Negativo</fullName>
            </value>
            <value>
                <fullName>Positivo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>