force-app/main/default/objects/COVID_Doc__c/fields/Test_Type__c.field-meta.xml
<CustomField>
    <fullName>Test_Type__c</fullName>
    <label>Test Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Antígeno</fullName>
            </value>
            <value>
                <fullName>PCR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>