force-app/main/default/objects/COVID_Doc__c/listViews/Documents.listView-meta.xml
<ListView>
    <fullName>Documents</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Test_Type__c</columns>
    <columns>Test_Result__c</columns>
    <filterScope>Mine</filterScope>
    <label>Documents</label>
</ListView>